# vessel

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: _label_taxonomy.yaml  aortaseg24.yaml  imagecas.yaml  mmwhs.yaml  msd_hepatic_vessel.yaml  parse2022.yaml  topcow.yaml  totalsegmentator_v2.yaml
src/vessel/: __init__.py  __main__.py
src/vessel/cli/: __init__.py  app.py  download.py  export.py  preprocess.py  registry.py  status.py
src/vessel/core/: __init__.py  config.py  metadata.py  paths.py  registry.py
src/vessel/download/: __init__.py  base.py  extract.py  gdrive.py  grand_challenge.py  http.py  kaggle.py  zenodo.py
src/vessel/export/: nnunet.py
src/vessel/preprocess/: __init__.py  crop_pad.py  dicom_convert.py  intensity.py  label_harmonize.py  pipeline.py  resample.py  split.py  validate.py
src/vessel/utils/: __init__.py  hash.py  io.py  progress.py
tests/: conftest.py  test_config.py  test_registry.py
